# Flex-SDK

./: .cursorrules  .gitignore  CHANGELOG.md  README.md  autonomous-build-flash-capture.sh  build-via-codespace.sh  clean_build_enablegnss.sh  clean_build_skipgnss.sh  config_prod.sh  config_skipgnss.sh  flash-and-listen.sh  listen_any.sh  meson.build  meson_options.txt
.devcontainer/: Containerfile  devcontainer.json
doc/: agent-in-calibration.md  agent-in-production.md  agent-in-timing-calibration.md  agent-in.md  cursor-host-integration.md  modbus-rx-timeout-spec.md
examples/i2c_bme280/: README.md
scripts/: buildkey.py  download_binaries.py
src/: main.c  modbussensor.c  modbussensor.h
subprojects/libflex/: meson.build
subprojects/libflex/include/: flex.h  flex_diag_conf.h
