option('skip_gnss', type : 'boolean', value : false,
        description: 'Disable GNSS sync task and use default location',
        yield: true
)
option('disable_ble_adv', type : 'boolean', value : false,
        description: 'Disable BLE advertising when running this user application',
        yield: true
)
option('cold_start', type : 'boolean', value : false,
        description: 'Build the merge applications binary with cold start network information',
        yield: true
)
option('modbus_rx_timeout_test', type : 'boolean', value : false,
        description: 'Build firmware that runs only Modbus RX timeout test (one read + duration). See doc/modbus-rx-timeout-spec.md',
        yield: true
)
